# ember

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  README.zh.md  main.cpp
.ai/: architecture_decisions.md  kernel_patterns.md
.ai/codex_task_templates/: implement_module.md  optimize_kernel.md
apps/ember_cli/: main.cpp
backends/cuda/: cuda_runtime.cpp  cuda_runtime.h  cuda_utils.h
backends/cuda/kernels/: attention.cu  kernels.h  ops.cu  rmsnorm.cu  rope.cu  softmax.cu
benchmarks/: README.md  README.zh.md  cache_policy_sim.cpp  e2e_benchmark.cpp  kernel_bench.cu  lora_hot_update_benchmark.cpp  lora_weight_merge_check.cpp  multi_candidate_rollout.cpp  p2p_bandwidth.cpp  phase_analysis.cpp  prefix_cache_benchmark.cpp  rollout_update_loop_benchmark.cpp  serve_benchmark.cpp  stage_breakdown.cpp
cli/: args.cpp  args.h
core/: config.h  config_loader.cpp  config_loader.h  error.h  sampler.h  session.h  tensor.h  tokenizer.h  types.h
docs/: architecture.md  development.md  ember_task_checklist_reordered.md  ember_task_checklist_v3.md  ember_tutorial_series_prompts_0_19_20260226.md  model_selection.md  qwen35_upgrade_plan.md  sampler_explanation.md  stage52_external_dataset_generation_template.md  testing.md  tutorial_00_prompt_full_20260226.md  tutorial_01_prompt_full_20260226.md  tutorial_06_prompt_full_20260226.md  tutorial_07_prompt_full_20260226.md  tutorial_08_prompt_full_20260226.md  tutorial_09_prompt_full_20260226.md  tutorial_10_prompt_full_20260226.md  tutorial_11_prompt_full_20260226.md  tutorial_13_prompt_full_20260226.md  tutorial_15_prompt_full_20260226.md  tutorial_16_prompt_full_20260226.md  tutorial_17_prompt_full_20260226.md  tutorial_18_prompt_full_20260226.md  tutorial_19_prompt_full_20260226.md  tutorial_prompts_full_index_20260226.md
docs/tasks/: ROADMAP.md
docs/tasks/templates/: task-template.md
examples/: check_mode.cpp  decode_loop.cpp  minimal_runtime.cpp
formats/: safetensors.cpp  safetensors.h
include/: cli.h  inference.h  model.h  utils.h
kernels/common/: cublas_wrapper.h  cuda_utils.h
kernels/triton/: fused_rmsnorm.py  fused_rope.py  gemm.py  sampling.py
legacy/: README.md
legacy/docs/: lora_adapter_quickstart.md  model_selection.md  tutorial_02_prompt_full_20260226.md  tutorial_03_prompt_full_20260226.md  tutorial_04_prompt_full_20260226.md  tutorial_05_prompt_full_20260226.md  tutorial_12_prompt_full_20260226.md  tutorial_14_prompt_full_20260226.md
legacy/scripts/: compare_logits.py
legacy/scripts/report/: bench_sglang_rollout.py  bench_transformers_rollout.py  run_report.py  run_stage1_milestone.sh  run_stage1_prefix_cache.py  run_stage2_numeric_consistency.py  run_stage31_base_operator_spotcheck.py  run_stage43_strategy_table.py  run_stage44_updatablekv_sweep.py  run_stage52_baseline_compare.py  summarize_framework_compare_repeats.py
legacy/scripts/train/: README.md  build_stage52_synth_extraction_dataset.py  common_train.py  run_min_lora.sh  run_stage52_best_of_n_extraction.py  run_stage52_build_dpo_pairs.py  run_stage52_sft_min.py  run_stage52_snapshot_dataset.py
legacy/scripts/verifier/: common_verifier.py
python/: BUILD.bazel
python/ember/: __init__.py
python/ember/_bindings/: __init__.py
python/ember/auto_evolve/: __init__.py
python/ember/cache/: __init__.py
python/ember/graph/: __init__.py
python/ember/nn/: __init__.py
python/ember/pipeline/: __init__.py
python/ember/serve/: __init__.py
runtime/: batch_runtime.h  cache_policy.h  cur_pos_guard.h  iruntime.h  kv_slot_guard.h  runtime_setup.h  scheduler.cpp  scheduler.h
scripts/: compare_greedy.py  compare_hidden.py  extract_ggml.sh
scripts/analysis/: pipeline_model.py
scripts/ci/: README.md  build.sh  common.sh  dev_check.sh  gpu_check.sh  greedy_regression.sh  layer_check.sh  run_local.sh
scripts/exllama/: bench_exllamav3.py
scripts/report/: README.md  bench_vllm_rollout.py  common_report.py  run_framework_compare.py  run_report.py  run_report.sh  run_stage1_cumulative_profile.py  run_stage1_locality_sweep.py  run_stage1_lora_hot_update.py  run_stage1_milestone.py  run_stage1_prefix_cache.py  run_stage1_split_profile.py  run_stage1_split_profile.sh  run_stage2_multi_candidate.py  run_stage2_numeric_consistency.py  run_stage31_block_align_profile.py  run_stage31_lora_delta_profile.py  run_stage31_lora_numeric_align.py  run_stage31_lora_weight_merge_check.py  run_stage33_cache_policy.py  run_stage52_baseline_compare.py  run_stage53_e2e_loop_compare.py  run_stage53_unified_backend_advantage.py
scripts/train/: README.md  build_stage52_synth_extraction_dataset.py  run_stage52_best_of_n_extraction.py  run_stage52_build_dpo_pairs_oracle_exact.py  run_stage52_build_synthetic_pairs_from_gold.py  run_stage52_dpo_min.py  run_stage52_sft_min.py  run_stage52_validate_dataset.py  train_min_lora_adapter.py
scripts/verifier/: README.md  extraction_verifier.py  sql_verifier.py
src/: cli.cpp  inference.cpp  main.cpp  model.cpp  utils.cpp
tests/: test_cpu.cpp  test_cuda_kernels.cu  test_cuda_runtime.cpp  test_dual_gpu.cpp  test_qwen3.cpp  test_varpos_batch.cpp
tests/kernels/: test_fused_rmsnorm.py  test_fused_rope.py  test_gemm.py  test_sampling.py
