"""Ember: Open-source full-stack AI inference platform."""

module(
    name = "ember",
    version = "0.1.0",
)

# Python rules
bazel_dep(name = "rules_python", version = "1.4.1")

# C++ rules
bazel_dep(name = "rules_cc", version = "0.1.1")

# Protocol Buffers (for config/metadata serialization)
bazel_dep(name = "protobuf", version = "29.3")

# Testing
bazel_dep(name = "googletest", version = "1.15.2")

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# Pip dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//third_party:requirements_lock.txt",
)
use_repo(pip, "pip")
